--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -86,3 +86,114 @@
     }
 
 }
+
+$small: 475px;
+$semiMedium: 640px;
+$medium: 768px;
+$big: 1024px;
+$large: 1200px;
+$veryBig: 1536px;
+
+@media (max-width: $small) {
+    
+
+    .main{
+        display: flex;
+        justify-content: flex-start;
+        padding: 40px 0;
+    
+
+        .container{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            
+
+            .firstsection{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                align-items: center;
+                gap: 60px;
+                padding: 40px 20px;
+        
+                .leftside{
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 10px;
+                    
+                    span{
+                        word-wrap: break-word;
+                        color: #666768;
+                        font-weight: 500;
+                        font-size: 20px;
+                        
+                    }
+        
+                    h1{
+                        margin: 0px;
+                        width: 350px;
+                        font-size: 40px;
+                        word-wrap: break-word;
+        
+                        span{
+                            color: #017dfc;
+                            font-size: 40px;
+                        }
+                       
+                    }
+        
+                    p{
+                        max-width: 350px;
+                        color: #afb0b4;
+                        line-height: 30px;
+                        font-size: 20px;
+                        word-wrap: break-word;
+                    }
+        
+                    button{
+                        
+                        border: none;
+                        padding: 18px;
+                        color: white;
+                        border-radius: 25px;
+                        cursor: pointer;
+                        background-color: green;
+                        font-size: 16px;
+                    }
+                }
+        
+                .rightside{
+                    display: flex;
+                    justify-content: center;
+                    width: 300px;
+                    height: 300px;
+                    object-fit: contain;
+                    padding-bottom: 40px;
+
+                    .pageImge{
+                        width: 340px;
+                        height: 400px;
+                        margin: 0 auto;
+                    }
+
+                }
+            }
+
+            .secondSection{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 60px 0px;
+                width: 0%;
+            }
+    
+            .thirdSection{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: flex-start;
+                // align-items: center;
+            }
+        }
+    }
+}
