--- a/src/component/footer/footer.module.scss
+++ b/src/component/footer/footer.module.scss
@@ -5,7 +5,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        padding: 20px 0px;
+        padding-top: 30px;
         gap: 30px;
 
         .top{
@@ -129,6 +129,62 @@
                     justify-content: center;
                     align-items: center;
                     color: white;
+                }
+            }
+        }
+    }
+}
+
+$small: 475px;
+$semiMedium: 640px;
+$medium: 768px;
+$big: 1024px;
+$large: 1200px;
+$veryBig: 1536px;
+
+@media (max-width: $small) {
+    .footer{
+        display: flex;
+        justify-content: flex-start;
+
+        .wrapper{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            padding-top: 30px;
+            gap: 30px;
+
+            .top{
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                gap: 2rem;
+                width: 100%;
+            }
+
+            .bottom{
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                gap: 2rem;
+
+                .socialMedia{
+                    display: flex;
+                    width: 50%;
+                    justify-content: space-around;
+    
+                    .socialIcon{
+                        display: flex;
+                        width: 30px;
+                        height: 30px;
+                        background-color: #509399;
+                        border-radius: 50%;
+                        justify-content: center;
+                        align-items: center;
+                        color: white;
+                    }
                 }
             }
         }
