--- a/src/component/services/services.module.scss
+++ b/src/component/services/services.module.scss
@@ -74,3 +74,92 @@
         font-size: 18px;
     }
 }
+
+$small: 475px;
+$semiMedium: 640px;
+$medium: 768px;
+$big: 1024px;
+$large: 1200px;
+$veryBig: 1536px;
+
+@media (max-width: $small) {
+
+    .service{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 30px 0px;
+        gap: 3rem;
+        box-sizing: border-box;
+
+        .top{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            span{
+                color: #bc7920;
+                font-size: 30px;
+            }
+    
+            h1{
+                margin: 0px;
+            }
+    
+            p{
+               word-wrap: break-word;
+                width: 350px;
+                line-height: 35px;
+                font-size: 18px;
+                color: #8497b7;
+                
+            }
+        }
+
+        .down{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            gap: 50px;
+            
+    
+            .first{
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                width: 300px;
+                padding: 30px 20px;
+                background-color: #ffffff;
+                gap: 15px;
+                border-radius: 20px;
+    
+                .firstImg{
+                    width: 60px;
+                    height: 60px;
+                }
+    
+                h3{
+                    margin: 0px;
+                }
+    
+                p{
+                    margin: 0;
+                    line-height: 25px;
+                }
+            }
+        }
+
+        button{
+            border: none;
+            color: white;
+            background-color: #509399;
+            cursor: pointer;
+            padding: 20px 20px;
+            border-radius: 25px;
+            font-size: 14px;
+        }
+    }
+}
