--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -26,8 +26,9 @@
         .nav_menu{
             display: flex;
             gap: 35px;
-            font-size: 18px;
+            font-size: 20px;
             color: #bc7920;
+            font-weight: 500;
         }
 
         .breadMenu{
