--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     background-color: #f6f7ff;
-    padding: 20px 0px;
+    padding-top: 20px;
     width: 100%;
 
     .container{
@@ -11,8 +11,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        width: 80%;
-        max-width: 80%;
+        // width: 80%;
+        // max-width: 80%;
        
         .firstsection{
             display: flex;
@@ -158,7 +158,7 @@ $veryBig: 1536px;
                         color: white;
                         border-radius: 25px;
                         cursor: pointer;
-                        background-color: green;
+                        background-color: #509399;
                         font-size: 16px;
                     }
                 }
