--- a/src/component/encrypt/Encrypt.module.scss
+++ b/src/component/encrypt/Encrypt.module.scss
@@ -1,27 +1,35 @@
 .encrypt{
-
+    background-image: url(../../../public/foreware-2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    box-sizing: border-box;
+    width: 100%;
+    height: 800px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 3rem;
+    gap: 6rem;
 
     .leftEncrypt{
         flex: 3;
 
-        .encryptImg{
-            // height: 100px;
-            // width: 100px;
-            object-fit: cover;
-        }
+        // .encryptImg{
+        //     // height: 100px;
+        //     // width: 100px;
+        //     object-fit: cover;
+        // }
     }
 
     .rightEncrypt{
         flex: 3;
         display: flex;
         flex-direction: column;
-        padding: 0 50px;
+        padding: 0 130px;
         justify-content: center;
         align-items: center;
+        color: white;
+        // width: 50%;
 
         h1{
             margin: 0;
@@ -33,12 +41,12 @@
         p{
             line-height: 35px;
             font-size: 18px;
-            color: #939fb1;
+            // color: #939fb1;
         }
 
         button{
             border: none;
-            padding: 25px;
+            padding: 20px;
             background-color: #509399;
             color: white;
             font-size: 17px;
@@ -62,6 +70,8 @@ $veryBig: 1536px;
         justify-content: flex-start;
         align-items: flex-start;
         flex-wrap: wrap;
+        background-image: none;
+        height: 450px;
 
         .leftEncrypt{
             display: none;
@@ -71,12 +81,12 @@ $veryBig: 1536px;
             // flex: 3;
             display: flex;
             flex-wrap: wrap;
-            padding: 0;
+            padding: 10px 30px;
             justify-content: flex-start;
     
             h1{
                 margin: 0;
-                font-size: 35px;
+                font-size: 30px;
                 word-wrap: break-word;
                 span{
                     color: #017dfc;
