--- a/src/component/services/services.module.scss
+++ b/src/component/services/services.module.scss
@@ -61,6 +61,9 @@
                 margin: 0;
                 line-height: 25px;
             }
+            .learn{
+                color: rgb(238, 68, 68);
+            }
         }
     }
 
