--- a/src/component/footer/footer.module.scss
+++ b/src/component/footer/footer.module.scss
@@ -98,6 +98,16 @@
                     }
                 }
             }
+            
+            button{
+                padding: 10px 20px;
+                font-size: 20px;
+                border: none;
+                border-radius: 10px;
+                background-color: #509399;
+                color: white;
+                cursor: pointer;
+            }
         }
 
         .bottom{
@@ -161,6 +171,20 @@ $veryBig: 1536px;
                 align-items: flex-start;
                 gap: 2rem;
                 width: 100%;
+
+                .btn{
+                    display: flex;
+                    margin-left: 3rem;
+                    padding: 5px 10px;
+                    font-size: 17px;
+                    border: none;
+                    border-radius: 10px;
+                    background-color: #509399;
+                    color: white;
+                    cursor: pointer;
+                    align-self: center;
+                    justify-self: center;
+                }
             }
 
             .bottom{
