latest commit jan 24

--- a/src/component/footer/footer.module.scss
+++ b/src/component/footer/footer.module.scss
@@ -124,6 +124,10 @@
                     color:#eea74a;
                 }
             }
+            .infomail{
+                color:#f19419;
+                font-size: 18px;
+            }
 
             .socialMedia{
                 display: flex;
