--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -47,8 +47,8 @@
                     flex-direction: column;
                     position: absolute;
                     width: 160px;
-                    background-color: #509399;
-                    color: #e2d1bb;
+                    background-color: white;
+                    color: #f5c689;
                     left: 0px;
                     top: 30px;
                     gap: 7px;
