--- a/src/component/encrypt/Encrypt.module.scss
+++ b/src/component/encrypt/Encrypt.module.scss
@@ -1,60 +1,96 @@
 .encrypt{
-    background-image: url(../../../public/foreware-2.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    box-sizing: border-box;
-    width: 100%;
-    height: 800px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    width: 90%;
+    height: 600px;
+    justify-content: center;
     align-items: center;
-    gap: 6rem;
+    gap: 20px;
 
-    .leftEncrypt{
-        flex: 3;
-
-        // .encryptImg{
-        //     // height: 100px;
-        //     // width: 100px;
-        //     object-fit: cover;
-        // }
-    }
-
-    .rightEncrypt{
-        flex: 3;
+    .ccntact{
         display: flex;
         flex-direction: column;
-        padding: 0 130px;
         justify-content: center;
         align-items: center;
-        color: white;
-        // width: 50%;
+        gap: 10px;
 
-        h1{
-            margin: 0;
-            font-size: 35px;
-            span{
-                color: #017dfc;
-            }
+        h3{
+            font-size: 28px;
+            margin: 0px;
+            color: #e9c473;
         }
+
         p{
-            line-height: 35px;
+            width: 70%;
             font-size: 18px;
-            // color: #939fb1;
-        }
-
-        button{
-            border: none;
-            padding: 20px;
-            background-color: #509399;
-            color: white;
-            font-size: 17px;
-            width:fit-content;
-            border-radius: 25px;
-            cursor: pointer;
+            text-align: center;
+            margin: 0px;
+            // color: #8497b7;
         }
     }
+
+    .contactFrm{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+
+        h3{
+            font-size: 25px;
+            color: #e9c473;
+        }
+
+        .div{
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+
+            .form{
+                display: flex;
+                flex-wrap: wrap;
+                padding: 20px;
+                justify-content: center;
+                align-items: center;
+                gap: 50px;
+    
+    
+                .formInput{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+    
+                    input{
+                        width: 410px;
+                        height: 50px;
+                        border: none;
+                        outline: none;
+                        padding: 0px 10px;
+                    }
+    
+                    .formInputMessage{
+                        width: 900px;
+                    }
+                }
+    
+                .btn{
+                    width: 360px;
+                    padding: 15px 0px;
+                    border: none;
+                    border-radius: 7px;
+                    font-size: 20px;
+                    color: #e9c473;
+                    background-color: #509399;
+                    cursor: pointer;
+                }
+            }
+        }
+
+
+        
+    }
+
+   
 }
 
 $small: 475px;
@@ -67,47 +103,94 @@ $veryBig: 1536px;
 @media (max-width: $small) {
     .encrypt{
         display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
-        flex-wrap: wrap;
-        background-image: none;
-        height: 500px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 600px;
+        padding: 0px 15px;
 
-        .leftEncrypt{
-            display: none;
+        .ccntact{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 7px;
+    
+            h3{
+                font-size: 20px;
+                margin: 0px;
+                color: #e9c473;
+            }
+    
+            p{
+                width: 90%;
+                font-size: 18px;
+                text-align: center;
+                margin: 0px;
+                // color: #8497b7;
+            }
         }
 
-        .rightEncrypt{
-            // flex: 3;
+        .contactFrm{
             display: flex;
-            flex-wrap: wrap;
-            padding: 10px 30px;
-            justify-content: flex-start;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 90%;
     
-            h1{
-                margin: 0;
-                font-size: 30px;
-                word-wrap: break-word;
-                span{
-                    color: #017dfc;
+            h3{
+                font-size: 20px;
+                color: #e9c473;
+            }
+    
+            .div{
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
+    
+                .form{
+                    display: flex;
+                    flex-direction: column;
+                    padding: 20px;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 30px;
+        
+        
+                    .formInput{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+        
+                        input{
+                            width: 300px;
+                            height: 50px;
+                            border: none;
+                            outline: none;
+                            padding: 0px 10px;
+                            border-radius: 5px;
+                        }
+        
+                        .formInputMessage{
+                            width: 300px;
+                        }
+                    }
+        
+                    .btn{
+                        width: 100px;
+                        padding: 10px 0px;
+                        border: none;
+                        border-radius: 7px;
+                        font-size: 20px;
+                        color: #e9c473;
+                        background-color: #509399;
+                        cursor: pointer;
+                    }
                 }
             }
-            p{
-                line-height: 35px;
-                font-size: 18px;
-                color: #939fb1;
-            }
     
-            button{
-                border: none;
-                padding: 15px;
-                background-color: #509399;
-                color: white;
-                font-size: 17px;
-                width:fit-content;
-                border-radius: 25px;
-                cursor: pointer;
-            }
+    
+            
         }
     }
 }
