--- a/src/component/services/services.module.scss
+++ b/src/component/services/services.module.scss
@@ -160,7 +160,7 @@ $veryBig: 1536px;
             color: white;
             background-color: #509399;
             cursor: pointer;
-            padding: 20px 20px;
+            padding: 15px;
             border-radius: 25px;
             font-size: 14px;
         }
