--- a/src/component/encrypt/Encrypt.module.scss
+++ b/src/component/encrypt/Encrypt.module.scss
@@ -6,6 +6,9 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
+    padding: 20px 0px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 
     .ccntact{
         display: flex;
