--- a/src/app/contact-us/ContactUs.module.scss
+++ b/src/app/contact-us/ContactUs.module.scss
@@ -6,7 +6,7 @@
     background-color: #f6f7ff;
     position: relative;
     max-height: fit-content;
-    padding: 20px;
+    // padding: 20px;
 
     .bckImage{
         display: flex;
@@ -16,7 +16,7 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
-        filter: blur(7px);
+        filter: blur(6px);
         padding: 15px;
         margin-bottom: 40px;
 
