--- a/src/app/contact-us/ContactUs.module.scss
+++ b/src/app/contact-us/ContactUs.module.scss
@@ -6,6 +6,7 @@
     background-color: #f6f7ff;
     position: relative;
     max-height: fit-content;
+    padding-bottom: 20px;
     // padding: 20px;
 
     .bckImage{
