--- a/src/component/encrypt/Encrypt.module.scss
+++ b/src/component/encrypt/Encrypt.module.scss
@@ -1,14 +1,15 @@
 .encrypt{
     display: flex;
     flex-direction: column;
-    width: 90%;
-    height: 600px;
+    width: 100%;
+    height: 700px;
     justify-content: center;
     align-items: center;
     gap: 20px;
     padding: 20px 0px;
     margin-top: 20px;
     margin-bottom: 20px;
+    background-color: #509399;
 
     .ccntact{
         display: flex;
@@ -29,6 +30,7 @@
             text-align: center;
             margin: 0px;
             // color: #8497b7;
+            color: white;
         }
     }
 
@@ -64,15 +66,19 @@
                     gap: 10px;
     
                     input{
-                        width: 410px;
+                        width: 550px;
                         height: 50px;
                         border: none;
                         outline: none;
                         padding: 0px 10px;
+                        border-radius: 7px;
                     }
     
                     .formInputMessage{
-                        width: 900px;
+                        width: 1180px;
+                    }
+                    label{
+                        color: white;
                     }
                 }
     
@@ -82,8 +88,8 @@
                     border: none;
                     border-radius: 7px;
                     font-size: 20px;
-                    color: #e9c473;
-                    background-color: #509399;
+                    color: white;
+                    background-color: #e9c473;
                     cursor: pointer;
                 }
             }
