--- a/src/app/about-us/aboutUs.module.scss
+++ b/src/app/about-us/aboutUs.module.scss
@@ -25,6 +25,10 @@
         color: white;
         position: absolute;
         top: 180px;
+
+        span{
+            font-size: 30px;
+        }
     }
 
     .aboutWrapper{
