--- a/src/app/contact-us/ContactUs.module.scss
+++ b/src/app/contact-us/ContactUs.module.scss
@@ -30,6 +30,10 @@
             color: white;
             position: absolute;
             top: 180px;
+
+            span{
+                font-size: 30px;
+            }
             
     }  
 }
