--- a/src/component/encrypt/Encrypt.module.scss
+++ b/src/component/encrypt/Encrypt.module.scss
@@ -194,8 +194,8 @@ $veryBig: 1536px;
                         border: none;
                         border-radius: 7px;
                         font-size: 20px;
-                        color: #e9c473;
-                        background-color: #509399;
+                        color: white;
+                        background-color: #e9c473;
                         cursor: pointer;
                     }
                 }
