--- a/src/app/about-us/aboutUs.module.scss
+++ b/src/app/about-us/aboutUs.module.scss
@@ -33,11 +33,154 @@
 
     .aboutWrapper{
         display: flex;
+       flex-wrap: wrap;
+        // justify-content: center;
+        // align-items: center;
+        width: 90%;
+        padding: 30px 0px;
+        gap: 30px;
+
+           .abtTxt{
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+            box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+            background-color: #e2e4e4;
+            padding: 15px 40px;
+            width: 42%;
+                border-radius: 10px;
+
+
+                .abtTextTop{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 10px;
+
+                    .immg{
+                        width: 50px;
+                        height: 50px
+                    }
+
+                    h3{
+                        color: #bc7920;
+                    }
+                }
+
+                p{
+                    color: #666768;
+                    line-height:25px;
+                    font-size: 16px;
+                }
+
+                .list{
+                    display: flex;
+                    flex-direction: column;
+                    line-height: 25px;
+                    font-size: 16px;
+                    color: #666768;
+                }
+           } 
+        
+    }
+}
+
+$small: 475px;
+$semiMedium: 640px;
+$medium: 768px;
+$big: 1024px;
+$large: 1200px;
+$veryBig: 1536px;
+
+@media (max-width: $small){
+    .aboutUs{
+        display: flex;
         flex-direction: column;
+        width: 100%;
         justify-content: center;
         align-items: center;
-        width: 80%;
-
-        
+        position: relative;
+    
+        .aboutImage{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 400px;
+            background-image: url(../../../public/aboutus.avif);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            filter: blur(5px);
+        }
+    
+        .abt{
+            font-size: 40px;
+            font-weight: bolder;
+            color: white;
+            position: absolute;
+            top: 180px;
+    
+            span{
+                font-size: 30px;
+            }
+        }
+    
+        .aboutWrapper{
+            display: flex;
+           flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 90%;
+            padding: 30px 0px;
+            gap: 30px;
+    
+               .abtTxt{
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+                box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+                background-color: #e2e4e4;
+                padding: 15px 40px;
+                width: 80%;
+                    border-radius: 10px;
+    
+    
+                    .abtTextTop{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 10px;
+    
+                        .immg{
+                            width: 50px;
+                            height: 50px
+                        }
+    
+                        h3{
+                            color: #bc7920;
+                        }
+                    }
+    
+                    p{
+                        color: #666768;
+                        line-height:25px;
+                        font-size: 16px;
+                    }
+    
+                    .list{
+                        display: flex;
+                        flex-direction: column;
+                        line-height: 25px;
+                        font-size: 16px;
+                        color: #666768;
+                    }
+               } 
+            
+        }
     }
 }
