--- a/src/component/services/services.module.scss
+++ b/src/component/services/services.module.scss
@@ -43,7 +43,7 @@
             flex-direction: column;
             justify-content: flex-start;
             width: 300px;
-            padding: 50px 40px;
+            padding: 20;
             background-color: #ffffff;
             gap: 15px;
             border-radius: 20px;
