--- a/src/app/about-us/aboutUs.module.scss
+++ b/src/app/about-us/aboutUs.module.scss
@@ -145,7 +145,7 @@ $veryBig: 1536px;
                 align-items: flex-start;
                 -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
                 box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-                background-color: #e2e4e4;
+                background-color: white;
                 padding: 15px 20px;
                 width: 83%;
                     border-radius: 10px;
