--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -40,7 +40,7 @@
                     font-size: 40px;
     
                     span{
-                        color: #017dfc;
+                        color: #bc7920;
                         font-size: 40px;
                     }
                    
@@ -154,7 +154,7 @@ $veryBig: 1536px;
                         word-wrap: break-word;
         
                         span{
-                            color: #017dfc;
+                            color: #bc7920;
                             font-size: 40px;
                         }
                        
